# rust-i18n

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  build.rs
.github/workflows/: ci.yml
benches/: bench.rs  minify_key.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/extract/: Cargo.toml
crates/extract/src/: attrs.rs  example.test.rs  extractor.rs  generator.rs  iter.rs  lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs  mikey.rs  minify_key.rs  tr.rs
crates/support/: Cargo.toml
crates/support/src/: atomic_str.rs  backend.rs  config.rs  cow_str.rs  lib.rs  minify_key.rs  tr_key.rs
examples/app/: main.rs
examples/app-egui/: Cargo.toml
examples/app-egui/locales/: v2.yml
examples/app-egui/src/: main.rs
examples/app-load-path/: Cargo.toml
examples/app-load-path/src/: main.rs
examples/app-metadata/: Cargo.toml
examples/app-metadata/locales/: v2.yml
examples/app-metadata/src/: main.rs
examples/app-minify-key/: Cargo.toml
examples/app-minify-key/locales/: v2.yml
examples/app-minify-key/src/: main.rs
examples/app-tr/: Cargo.toml
examples/app-tr/locales/: v2.yml
examples/app-tr/src/: main.rs
examples/app-workspace/: Cargo.toml  README.md
examples/app-workspace/app1/: Cargo.toml
examples/app-workspace/app1/src/: main.rs
examples/app-workspace/crates/example-base/: Cargo.toml
examples/app-workspace/crates/example-base/locales/: en.yml  fr.yml
examples/app-workspace/crates/example-base/src/: lib.rs
examples/app/locales/: en.yml  fr.yml  view.en.yml  view.fr.yml
examples/atomic_str/: Cargo.toml
examples/bar/: Cargo.toml
examples/bar/locales/: en.yml
examples/bar/src/: lib.rs
examples/foo/: Cargo.toml
examples/foo/locales/: de.yml  en.yml  fr.yml
examples/foo/src/: info.rs  lib.rs
examples/locales/: en.yml  fr.yml
examples/share-i18n/crates/i18n/src/: lib.rs
examples/share-i18n/locales/: i18n.yml
examples/share-in-workspace/: Cargo.toml  README.md
examples/share-in-workspace/crates/i18n/: Cargo.toml
examples/share-in-workspace/crates/i18n/src/: lib.rs
examples/share-in-workspace/crates/my-app1/: Cargo.toml
examples/share-in-workspace/crates/my-app1/src/: lib.rs
examples/share-in-workspace/crates/my-app2/: Cargo.toml
examples/share-in-workspace/crates/my-app2/src/: lib.rs
examples/share-in-workspace/locales/: app.yml
examples/share-locales-in-workspace/: Cargo.toml
examples/share-locales-in-workspace/my-app1/: Cargo.toml
examples/share-locales-in-workspace/my-app2/: Cargo.toml
examples/share-locales-in-workspace/my-app2/src/: lib.rs
examples/share-locales-in-workspace/my-i18n/: Cargo.toml
examples/share-locales-in-workspace/my-i18n/src/: lib.rs
locales/: de.yml  en.yml
src/: config.rs  lib.rs  main.rs
tests/: i18n_minify_key.rs  i18n_test.rs  integration_tests.rs  intergartion_test.rs  multi_threading.rs
tests/locales/: de.yml  en.json  en.yml  nested-locale-tests.yml  test-toml.en.toml  user.en.yaml  user.en.yml  v2.yml  zh-CN.yml  zh.yml
