[package]
authors = ["Jason Lee <huacnlee@gmail.com>"]
build = "build.rs"
categories = ["localization", "internationalization"]
description = "Rust I18n is use Rust codegen for load YAML file storage translations on compile time, and give you a t! macro for simply get translation texts."
edition = "2021"
exclude = ["crates", "tests"]
keywords = ["i18n", "yml", "localization", "internationalization"]
license = "MIT"
name = "rust-i18n"
readme = "README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "2.3.1"

[dependencies]
once_cell = "1.10.0"
rust-i18n-support = {path = "./crates/support", version = "2.3.0"}
rust-i18n-macro = {path = "./crates/macro", version = "2.3.0"}

[dev-dependencies]
foo = {path = "examples/foo"}
criterion = "0.5"
lazy_static = "1"
serde_yaml = "0.8"

[build-dependencies]
globwalk = "0.8.1"
regex = "1"

[[example]]
name = "app"
test = true

[workspace]
members = [
    "crates/cli",
    "crates/extract",
    "crates/support",
    "crates/macro",
    "examples/app-load-path",
    "examples/foo",
]

[[bench]]
harness = false
name = "bench"
