[package]
authors = ["Jason Lee <huacnlee@gmail.com>"]
build = "build.rs"
categories = ["localization", "internationalization"]
description = "Rust I18n is use Rust codegen for load YAML file storage translations on compile time, and give you a t! macro for simply get translation texts."
edition = "2021"
exclude = ["crates", "tests"]
keywords = [
    "gettext",
    "i18n",
    "l10n",
    "intl",
    "internationalization",
    "localization",
    "tr",
    "translation",
    "yml",
]
license = "MIT"
name = "rust-i18n"
readme = "README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "3.0.2-alpha.0"

[workspace.dependencies]
anyhow = "1"
arc-swap = "1.6.0"
base62 = "2.0.2"
clap = { version = "4.1.14", features = ["derive"] }
criterion = "0.5"
foo = { path = "examples/foo" }
glob = "0.3"
globwalk = "0.8.1"
ignore = "0.4"
indoc = "1"
itertools = "0.11.0"
lazy_static = "1"
normpath = "1.1.1"
once_cell = "1.10.0"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1.0.2"
regex = "1"
rust-i18n = { path = "." }
rust-i18n-extract = { path = "./crates/extract", version = "3.0.0" }
rust-i18n-macro = { path = "./crates/macro", version = "3.0.0" }
rust-i18n-support = { path = "./crates/support", version = "3.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.30"
siphasher = "1.0"
smallvec = "1.12.0"
syn = { version = "2.0.18", features = ["full", "extra-traits"] }
toml = "0.8.8"
triomphe = { version = "0.1.11", features = ["arc-swap"] }

[dependencies]
once_cell.workspace = true
rust-i18n-support.workspace = true
rust-i18n-macro.workspace = true
smallvec.workspace = true

[dev-dependencies]
foo.workspace = true
criterion.workspace = true
lazy_static.workspace = true
serde_yaml.workspace = true

[build-dependencies]
globwalk.workspace = true
regex.workspace = true

[features]
log-miss-tr = ["rust-i18n-macro/log-miss-tr"]

[[example]]
name = "app"
test = true

[workspace]
members = [
    "crates/cli",
    "crates/extract",
    "crates/support",
    "crates/macro",
    "examples/app-egui",
    "examples/app-load-path",
    "examples/app-metadata",
    "examples/app-minify-key",
    "examples/foo",
]

[[bench]]
harness = false
name = "bench"

[[bench]]
harness = false
name = "minify_key"
