[package]
description = "cargo-i18n tool for the rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-cli"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "2.3.0"

[dependencies]
anyhow = "1"
clap = { version = "4.1.14", features = ["derive"] }
itertools = "0.11.0"
rust-i18n-support = { path = "../support", version = "2.3.0" }
rust-i18n-extract = { path = "../extract", version = "2.3.0" }
serde = { version = "1", features = ["derive"] }
toml = "0.7.4"

[[bin]]
name = "cargo-i18n"
path = "src/main.rs"
