[package]
description = "cargo-i18n tool for the rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-cli"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "3.0.0"

[dependencies]
anyhow.workspace = true
clap.workspace = true

rust-i18n-support.workspace = true
rust-i18n-extract.workspace = true

[[bin]]
name = "cargo-i18n"
path = "src/main.rs"
