[package]
description = "cargo-i18n tool for the rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-cli"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "3.1.1"

[dependencies]
anyhow = "1"
clap = { version = "4.1.14", features = ["derive"] }
rust-i18n-support = { path = "../support", version = "3.0.0" }
rust-i18n-extract = { path = "../extract", version = "3.0.0" }

[[bin]]
name = "cargo-i18n"
path = "src/main.rs"
