[package]
description = "Extractor for rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-extract"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "3.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
ignore.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
rust-i18n-support.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
syn.workspace = true
toml.workspace = true

[dev-dependencies]
indoc.workspace = true
