[package]
description = "Support for rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-support"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "2.4.0"

[dependencies]
globwalk = "0.8.1"
once_cell = "1.10.0"
proc-macro2 = "1.0"
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
toml = "0.7.4"
normpath = "1.1.1"
lazy_static = "1"
regex = "1"
