[package]
description = "Support for rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-support"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "3.1.2"

[dependencies]
arc-swap.workspace = true
base62.workspace = true
globwalk.workspace = true
itertools.workspace = true
once_cell.workspace = true
proc-macro2.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
siphasher.workspace = true
toml.workspace = true
normpath.workspace = true
lazy_static.workspace = true
regex.workspace = true
triomphe.workspace = true
