[package]
name = "app-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }
rust-i18n = { path = "../.." }

[features]
log-miss-tr = ["env_logger", "log", "rust-i18n/log-miss-tr"]

[package.metadata.i18n]
available-locales = ["en", "fr", "ja", "ko", "zh", "zh-CN"]
default-locale = "en"
minify-key = true
minify-key-len = 12
minify-key-thresh = 8
