[package]
edition = "2021"
name = "app-tr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }
rust-i18n = { path = "../.." }
# rust-i18n-macro = { path = "../../crates/macro" }

[features]
log_tr_dyn = ["env_logger", "log", "rust-i18n/log_tr_dyn"]

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
